# find_name_game

./: CMakeLists.txt  compile.sh
includes/utils/: util.h
includes/window/: project.h  window.h
resources/docs/: words.csv
src/: app.c
src/utils/: CMakeLists.txt  utils.c
src/window/: CMakeLists.txt  project.c  window.c
